--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,20 +38,23 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
     // Required if generating JSR-303 annotations
     implementation 'javax.validation:validation-api:1.1.0.CR2'
     // Required if generating Jackson 2 annotations
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
     // Required if generating JodaTime data types
     implementation 'joda-time:joda-time:2.2'
-
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
-
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    // Adds a remote binary dependency only for local tests.
+    testImplementation 'junit:junit:4.12'
+    // Adds a remote binary dependency only for the instrumented test APK.
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-
+    implementation 'com.android.support.test:rules:1.0.2'
 }
