--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/landingPage"
             android:name=".app.LandingPageActivity">
@@ -24,9 +26,16 @@
 
         </activity>
         <activity
+
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:name=".app.RecipeDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".app.MainActivity">
+        <activity
+
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".app.MainActivity">
 
         </activity>
     </application>
