--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,8 @@ android {
 }
 
 dependencies {
-
-
     def paging_version = "1.0.0"
     def view_model_version = "1.1.0"
-
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -43,9 +39,6 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
-
-
     implementation 'com.android.support:cardview-v7:28.0.0'
     // Required if generating JSR-303 annotations
     implementation 'javax.validation:validation-api:1.1.0.CR2'
@@ -56,31 +49,22 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
-
-
-
     // Adds a remote binary dependency only for local tests.
     testImplementation 'junit:junit:4.12'
     // Adds a remote binary dependency only for the instrumented test APK.
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
-
     //adding view model
     implementation "android.arch.lifecycle:extensions:$view_model_version"
     implementation "android.arch.lifecycle:viewmodel:$view_model_version"
-
     //adding paging
     implementation "android.arch.paging:runtime:$paging_version"
-
     //facebook shimmereffect
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
-
-
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'com.android.support.test:rules:1.0.2'
+    implementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 }
